// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AreaInput Snapshot all props 1`] = `
<div
  className="form-cell form-cell--error className"
>
  <span
    className="form-cell__label"
  >
    label *
  </span>
  <textarea
    className="faux-text-area"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="placeholder"
    rows={1}
    value="inputValue"
  />
  <span
    className="form-cell__error"
  >
    errorText
  </span>
</div>
`;

exports[`AreaInput Snapshot required props 1`] = `
<div
  className="form-cell"
>
  <textarea
    className="faux-text-area"
    onChange={[Function]}
    value="inputValue"
  />
</div>
`;
